# rubik

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: ColorConverter.hpp  RubiksCube.hpp  Vector3.hpp
src/: ColorConverter.cpp  ColorConverter.hpp  Enums.hpp  Quaternion.cpp  Quaternion.hpp  RubiksCube.cpp  RubiksCube.hpp  RubiksCubePiece.cpp  RubiksCubePiece.hpp  Vector3.cpp  Vector3.hpp  main.cpp
